# vogroth

./: .gitignore  CMakeLists.txt  CREDITS.txt  README.md  conanfile-win32.txt
assets/: CMakeLists.txt  assets.yaml
assets/maps/: test.json
assets/shaders/glsl110/: sprites.vert  sprites_alpha.frag  sprites_rgb.frag  sprites_rgba.frag
assets/tiles/: tileset.json
cmake/modules/: FindSDL2.cmake  Findlibzip.cmake
cmake/toolchains/: gcc-x86_64-w64-mingw32.cmake
conan/: settings.yml
conan/profiles/: msys2-mingw64
tools/: assettool.py  atlascomp.py  mapcomp.py  pkz.py  pkztool.py  tilesetcomp.py  vdutil.py
vogroth/: CMakeLists.txt  config.h.in  vogroth.rc
vogroth/src/: assets.c  assets.h  cdefs.h  debug.c  debug.h  game_defs.h  gl_api.c  gl_api.h  gl_shaders.c  gl_shaders.h  gl_state.c  gl_state.h  gl_types.h  main.c  math.h  memory.c  memory.h  pixbuf.c  pixbuf.h  render.c  render.h  rw.c  rw.h  sandbox.c  sandbox.h  sprites.c  sprites.h  system.h  system_unix.c  system_win32.c  texture.c  texture.h  tiles.c  tiles.h  tileset.c  tileset.h  types.h  unicode.c  unicode.h  vector_math.c  (+3 more)
